# WebMM

./: .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  AGENTS.md  CODE_STATUS.md  Cargo.toml  PLAN.md  PROJECT_STATUS.md  README.md  package.json  test_viewer.html
.github/workflows/: pages.yml  rust.yml
benches/: benchmark.rs
data/: mmff94_sample_parameters.json
docs/plans/: 2026-03-21-comprehensive-improvement.md  2026-03-22-full-mmff94-compliance.md  2026-03-28-mmff94-accuracy.md  (+1 more)
examples/: test_aromatic.rs  test_hetero.rs  test_pyrrole.rs  test_thio.rs
proptest-regressions/: prop_tests.txt
scripts/: compare_mmff94s.py  compare_rdkit.py
site/: index.html
src/: lib.rs  prop_tests.rs
test_molecules/: Aromatic_Rings_002.sdf  Aromatic_Rings_006.sdf  Branched_Alkanes_001.sdf  Branched_Alkanes_002.sdf  Drug-like_Fragments_001.sdf  Drug-like_Fragments_006.sdf  Functional_Groups_001.sdf  Functional_Groups_002.sdf  Functional_Groups_004.sdf  Functional_Groups_005.sdf  Functional_Groups_006.sdf  Functional_Groups_007.sdf  Functional_Groups_008.sdf  Functional_Groups_011.sdf  Functional_Groups_012.sdf  Functional_Groups_013.sdf  Heterocycles_002.sdf  Heterocycles_004.sdf  Heterocycles_005.sdf  Heterocycles_006.sdf  Nitrogen-containing_001.sdf  Nitrogen-containing_004.sdf  Nitrogen-containing_007.sdf  Simple_Alkanes_003.sdf  Simple_Alkanes_005.sdf  Simple_Alkanes_006.sdf  Small_Rings_(3-7_members)_001.sdf  Small_Rings_(3-7_members)_002.sdf  Small_Rings_(3-7_members)_003.sdf  Small_Rings_(3-7_members)_006.sdf  etkdg_v3_summary.json  test.sdf
(+54 files in other folders)
