[package]
name = "molgopt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3.64"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
proptest = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[[bin]]
name = "benchmark"
path = "benches/benchmark.rs"
